fixed spacing in about

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -208,8 +208,9 @@ h3{
 		padding-top: 10rem;
 	}
 	.wrapper{
-		justify-content: center;
+		justify-content: flex-start;
 		align-items: center;
+		padding-top: 10rem;
 		height: 100%;
 	}
 	img{
@@ -224,7 +225,7 @@ h3{
 
 .aboutContent{
 	align-items: center;
-	justify-content: space-around;
+	justify-content: space-between;
 	width: 80%;
 }
 
@@ -507,12 +508,23 @@ h3{
 		font-size: 1.5rem;
 		line-height: 1.8;
 	}
+	#work{
+		padding: 1rem 1rem 6rem;
+		.works{
+			padding: 0;
+		}
+		h2{
+			padding-top: 1rem;
+			width: 60%;
+			margin-bottom: 0;
+		}
+	}
 }
 
 @media all and (max-width: 320px) {
 	nav {
 		font-size: 2rem;
-		top: -15px;
+		top: 10px;
 		left: 10px;
 	}
 	.curly a{
